zz-out/pass14_run2/zz-scripts/chapter06/plot_fig05_delta_chi2_heatmap.err
  File "/home/jplal/MCGT/zz-scripts/chapter06/plot_fig05_delta_chi2_heatmap.py", line 109
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
